objects/fferpcore__VirtualDataObjectSourceMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>fferpcore__Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This mapping is custom when checked.</description>
        <inlineHelpText>This mapping is custom when checked.</inlineHelpText>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Key__c</fullName>
        <description>The generic key that the source data can be accessed with.</description>
        <inlineHelpText>The generic key that the source data can be accessed with.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This mapping is obsolete when checked.</description>
        <inlineHelpText>This mapping is obsolete when checked.</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Provider__c</fullName>
        <description>The source of the data, such as an SObjectType.</description>
        <inlineHelpText>The source of the data, such as an SObjectType.</inlineHelpText>
        <label>Provider</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Source__c</fullName>
        <description>The key of the data inside the source.</description>
        <inlineHelpText>The key of the data inside the source.</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TargetVirtualObject__c</fullName>
        <description>The virtual object of any child mappings, necessary for lookup and list mappings.</description>
        <inlineHelpText>The virtual object of any child mappings, necessary for lookup and list mappings.</inlineHelpText>
        <label>Target Virtual Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Type__c</fullName>
        <description>The type of mapping. Field for single values. Lookup for pointing to another record. List for pointing to multiple associated records.</description>
        <inlineHelpText>The type of mapping. Field for single values. Lookup for pointing to another record. List for pointing to multiple associated records.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                    <default>true</default>
                    <label>Field</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__VirtualObject__c</fullName>
        <description>The generic name of the resulting data object.</description>
        <inlineHelpText>The generic name of the resulting data object.</inlineHelpText>
        <label>Virtual Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Virtual Data Object Source Mapping</label>
    <pluralLabel>Virtual Data Object Source Mappings</pluralLabel>
</CustomObject>